poke/testsuite/poke.pkl/struct-types-diag-9.pk
/* { dg-do compile } */

deftype Bar =
  struct
  {
    int i;
    any j; /* { dg-error "invalid type" } */
    defun ja = void: {}
  };
